[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Bullet.gd" type="Script" id=1]
[ext_resource path="res://sounds/playershoot1.wav" type="AudioStream" id=2]

[sub_resource type="CapsuleShape" id=3]
radius = 1.66114
height = 1.87807

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
metallic = 0.89
metallic_specular = 0.85
metallic_texture_channel = 1
emission_enabled = true
emission = Color( 2, 0, 0, 1 )
emission_energy = 1.86
emission_operator = 0
emission_on_uv2 = false

[node name="Bullet" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
use_in_baked_light = true
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 0, 0 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 3.06
light_indirect_energy = 5.53
omni_range = 8.5

[node name="LightTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="BulletSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = 13.981
autoplay = true

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="LightTimer" to="." method="_on_LightTimer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
